cloud-infra-macros/tests/fails/bucket_arn_passed_in.rs
use cloud_infra_macros::bucket;

fn example() {
    let bucket = bucket!("arn:aws:s3:::some-examples-arn");
}

fn main() {}